# voxel-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  premake5.lua
VoxelEngine/: CMakeLists.txt  premake5.lua
VoxelEngine/data/shaders/: Batch2D.frag  Batch2D.vert  Chunk.frag  Chunk.vert  test.frag  test.vert
VoxelEngine/src/: Config.h  main.cpp  vepch.h
VoxelEngine/src/Core/: Assert.h  Game.cpp  Game.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
VoxelEngine/src/Core/Event/: Event.cpp  Event.h  InputEvent.h  WindowEvent.h
VoxelEngine/src/Graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
VoxelEngine/src/Player/: PlayerController.cpp  PlayerController.h
VoxelEngine/src/UI/: UI.cpp  UI.h  UIElement.cpp  UIElement.h
VoxelEngine/src/Utils/: Files.cpp  Files.h  ResourceManager.cpp  ResourceManager.h
VoxelEngine/src/World/: Block.cpp  Block.h  World.cpp  World.h
VoxelEngine/src/World/Chunk/: Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  ChunkRenderer.cpp  ChunkRenderer.h
VoxelEngine/src/World/Noise/: CombinedNoise.cpp  CombinedNoise.h  Noise.h  OctaveNoise.cpp  OctaveNoise.h  PerlinNoise.cpp  PerlinNoise.h  Random.h
VoxelEngine/src/World/WorldGenerator/: ClassicWorldGenerator.cpp  ClassicWorldGenerator.h  FlatWorldGenerator.cpp  FlatWorldGenerator.h  WorldGenerator.h
